syntax = "proto3";
package ET;

//ResponseType G2R_GetLoginKey
message R2G_GetLoginKey // IActorRequest
{
	int32 RpcId = 90;
	string Account = 1;
}

message G2R_GetLoginKey // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;

	int64 Key = 1;
	int64 GateId = 2;
}

//ResponseType G2R_CheckHasLogined
message R2G_CheckHasLogined // IActorRequest
{
    int32 RpcId = 90;
    int64 PlayerId = 93;
	bool  IsKnockOut = 94;
}

message G2R_CheckHasLogined // IActorResponse
{
    int32 RpcId = 90;
    int32 Error = 91;
    string Message = 92;
    int64 GateId = 93;

}